--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -133,3 +133,32 @@ h1 {
     height: 450px ;
     border: 1px solid transparent;
 }
+#fade {
+    display: none;
+    position:absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    z-index: 1001;
+    -moz-opacity: 0.8;
+    opacity: .70;
+    filter: alpha(opacity=80);
+}
+
+#modal {
+    display: none;
+    position: absolute;
+    top: 45%;
+    left: 45%;
+    z-index: 1002;
+    text-align:center;
+    overflow: auto;
+    border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #3498db;
+  width: 50px;
+  height: 50px;
+  
+  animation: spin 2s linear infinite;
+}
