--- a/src/app/components/usertype/usertype.component.css
+++ b/src/app/components/usertype/usertype.component.css
@@ -1,10 +1,10 @@
 .main-class {
     /* display: inline-block; */
     margin-top: 50px;
-    width: 85%;
+    width: 83%;
     padding-left: 2%;
     padding-right: 2%;
-    margin-left: 14.5%;
+    margin-left: 16.5%;
     height: 100%;
     overflow-y: scroll;
     background: rgb(230, 230, 230);
@@ -57,4 +57,46 @@
     font-weight: 600;
     cursor: pointer;
     padding: 2px;
+}
+.dialog{
+    height: 64px;
+    background-color: #f2f3f5;
+    padding: 0 16px;
+}
+.modaldialog{
+    width: 80%;
+    margin-left: 17.4%;
+    margin-top: 7.5%;  
+}
+.modaltitle{
+    margin-top: 1.7%;
+    font-size: inherit;
+    font-weight: inherit;
+    font-size: 150%;
+}
+.loginUserid{
+    margin-left: 4.5%;
+    display: block;
+   width: 380px;;
+   height: 30px;
+   padding: 6px 12px;
+   font-size: 14px;
+   line-height: 1.42857143;
+   color: #555;
+   background-color: #fff;
+   background-image: none;
+   border: 1px solid #ccc;
+   border-radius: 1px;
+  
+}
+.label-name {
+	display: inline-block;
+	max-width: 100%;
+	margin-bottom: 5px;
+	font-weight: bold;
+    margin-left: 4.8%;
+    }
+.savebtn{
+    margin-left: 70%;
+    margin-top: 6%;
 }
