--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -1,3 +1,44 @@
-<p style="margin-left: 500px">
-  attendance works!
-</p>
+<app-home></app-home>
+<div class=" main-class">
+  <div class="primary-container">
+    <header class="header">
+      <div class="heading4">Employee Attendance</div>
+    </header>
+    <div class="addbtn">
+      <button class="btn btn-primary adduser"  type="button" data-toggle="modal" data-target="#myModal">Add Employee Attendance
+      </button>
+    </div>
+    <div layout="row" class="userlist ">Attendance List</div>
+    <table class="table table-striped table-hover settable">
+      <thead>
+        <tr>
+          <th>No</th>
+          <th>EmployeeId</th>
+          <th>Intime</th>
+          <th>Outtime</th>
+          <th>TotalTime</th>
+          <th>Date</th>
+          <th>Status</th>
+          <th style="margin-left: 60%">Action</th>
+        </tr>
+      </thead>
+      <tr *ngFor="let attendance of allAttendance">
+          <td class="tablerow">{{attendance.id}}</td>
+        <td class="tablerow">{{attendance.employee.userid}}</td>
+        <td>{{attendance.intime}}</td>
+        <td>{{attendance.outtime}}</td>
+        <td>{{attendance.totaltime}}</td>
+        <td>{{attendance.date}}</td>
+        <td>{{attendance.status}}</td>
+        <td>
+          <span class="action-link" role="button" tabindex="0" (click)="loadUserTypeToEdit(usertype.id)" data-toggle="modal" data-target="#myModal">Edit</span>
+          <span> | </span>
+          <span class="action-link" role="button" tabindex="0" (click)="deleteUserType(usertype.id)">Delete</span>
+        </td>
+      </tr>
+    </table>
+  </div>
+</div>
+
+
+
