--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -112,6 +112,7 @@ h1 {
      margin-left: 25px;
  }
  .loginlabel{
+    margin-left: 4%;
 	display: inline-block;
     max-width: 100%;
     margin-bottom: 5px;
