--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -12,13 +12,13 @@
     <table class="table table-striped table-hover settable">
       <thead>
         <tr>
-          <th>No</th>
+          <th>{{ 'No' | translate }}</th>
           <th>EmployeeId</th>
-          <th>Intime</th>
-          <th>Outtime</th>
-          <th>TotalTime</th>
-          <th>Date</th>
-          <th>Status</th>
+          <th>{{ 'Intime' | translate }}</th>
+          <th>{{ 'Outtime' | translate }}</th>
+          <th>{{ 'Totaltime' | translate }}</th>
+          <th>{{ 'Date' | translate }}</th>
+          <th>{{ 'Status' | translate }}</th>
           <th style="margin-left: 60%">Action</th>
         </tr>
       </thead>
@@ -31,14 +31,69 @@
         <td>{{attendance.date}}</td>
         <td>{{attendance.status}}</td>
         <td>
-          <span class="action-link" role="button" tabindex="0" (click)="loadUserTypeToEdit(usertype.id)" data-toggle="modal" data-target="#myModal">Edit</span>
+          <span class="action-link" role="button" tabindex="0" (click)="loadEmployeeAttendanceToEdit(attendance.id)" data-toggle="modal" data-target="#myModal">Edit</span>
           <span> | </span>
-          <span class="action-link" role="button" tabindex="0" (click)="deleteUserType(usertype.id)">Delete</span>
+          <span class="action-link" role="button" tabindex="0" (click)="deleteEmployeeAttendance(attendance.id)">Delete</span>
         </td>
       </tr>
     </table>
   </div>
 </div>
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <form [formGroup]="attendanceForm" (ngSubmit)="onEmployeeAttendanceFormSubmit()">
+<div class="modal-dialog modaldialog">
+  <div class="modal-content" style="    height: 500px;">
+    <div class="modal-header dialog">
+      <button type="button" class="close" data-dismiss="modal">&times;</button>
+      <h2 class="modal-title modaltitle">Add New Attendance</h2>
+    </div>
+    <div class="modal-body">
+      <div class="row" style="    margin-top: 30px">
+        <div class=" form-group col-lg-6" style="margin-left: 35px;">
+          <label class="label-name " >{{ 'EmployeeId' | translate }}</label>
+          <select    class="loginUserid" id="emp" formControlName="employee" >
+            <option *ngFor=" let employee of allEmployee" [value]="employee.id"  >
+               {{employee.userid}}
+            </option>
+          </select>
+         
+        </div>
+
+        <div class="col-lg-offset-5">
+          <div class=" form-group col-lg-6">
+            <label class="label-name " > {{ 'Intime' | translate }}</label>
+            <input type="time" *ngIf="attendanceForm.get('intime')" step="2" formControlName="intime"  class="loginUserid"  >
+            <app-control-messages [control]="attendanceForm.controls.intime"></app-control-messages>
+          </div>
+        </div>
+      </div>
+      <div class="row" style="    margin-top: 30px">
+          <div class=" form-group col-lg-6" style="margin-left: 35px;">
+            <label class="label-name " >{{ 'Outtime' | translate }}</label>
+            <br>
+            <input type="time" *ngIf="attendanceForm.get('outtime')" step="2" formControlName="outtime" class="loginUserid" >
+            <app-control-messages [control]="attendanceForm.controls.outtime"></app-control-messages>
+          </div>
+  
+          <div class="col-lg-offset-5">
+            <div class=" form-group col-lg-6">
+              <label class="label-name " > {{ 'Date' | translate }}</label>
+              <input type="date" *ngIf="attendanceForm.get('date')" formControlName="date"  class="loginUserid" >
+              <app-control-messages [control]="attendanceForm.controls.date"></app-control-messages>
+            </div>
+          </div>
+        </div>
+      <div class="savebtn">
+        <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid">Save</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
+      margin-left: 20px;">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+</form>
+</div>
+
 
 
 
