<Add Attendance Component>

--- a/src/app/components/attendance/attendance.component.css
+++ b/src/app/components/attendance/attendance.component.css
@@ -101,3 +101,31 @@
     margin-left: 70%;
     margin-top: 6%;
 }
+
+#snackbar {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    top: 60px;
+    left: 50%;
+
+    font-size: 17px;
+}
+
+#snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
+.passvalidation {
+    color:red;
+ padding-top: 7px;
+ width: 250px 
+}
