--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -30,7 +30,7 @@
         <td>{{employee.lastName}}</td>
         <td>{{employee.phoneNumber}}</td>
         <td>{{employee.dateOfJoining}}</td>
-        <td>{{employee.usertype.id}}</td>
+        <td>{{employee.usertype.usertypeName}}</td>
         <td>{{employee.employeetype.type}}</td>
 
         <td>
