--- a/src/app/components/attendance/attendance.component.css
+++ b/src/app/components/attendance/attendance.component.css
@@ -7,3 +7,33 @@
     line-height: 3.5rem;
 }
 
+.searchButton{
+    margin-left: 30%;
+    width: 24%;
+    height: 20%;
+    margin-top: -3.5%;
+}
+butHeight{
+    height: 40px;
+}
+#snackbar {
+    visibility: hidden;
+    min-width: 250px;
+    margin-left: -125px;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 2px;
+    padding: 16px;
+    position: fixed;
+    z-index: 1;
+    left: 50%;
+    bottom: 30px;
+    font-size: 17px;
+}
+
+#snackbar.show {
+    visibility: visible;
+    -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
+    animation: fadein 0.5s, fadeout 0.5s 2.5s;
+}
