--- a/src/app/components/designation/designation.component.html
+++ b/src/app/components/designation/designation.component.html
@@ -7,6 +7,14 @@
     <div class="addbtn">
       <button class="btn btn-primary adduser"  type="button" data-toggle="modal" data-target="#myModal">{{'Add New Designation'|translate}}
       </button>
+      <div class="input-group input-group-lg searchButton">
+          <input type="text" class="form-control" style="height: 40px" placeholder="Search By Name" [(ngModel)]="name">
+          <div class="input-group-btn">
+            <button class="btn btn-default" style="height: 40px" type="submit">
+              <i class="glyphicon glyphicon-search"></i>
+            </button>
+          </div>
+        </div>
     </div>
     <div layout="row" class="userlist ">{{'Designation List'|translate}}</div>
     <table class="table table-striped table-hover settable">
@@ -20,13 +28,13 @@
           <th style="margin-left: 60%">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let designation of allDesignation">
+      <tr *ngFor="let designation of allDesignation | filter:name">
           <td class="tablerow">{{designation.id}}</td>
         <td class="tablerow">{{designation.name}}</td>
-        <td>{{designation.band}}</td>
-        <td>{{designation.level}}</td>
+        <td class="tablerow">{{designation.band}}</td>
+        <td class="tablerow">{{designation.level}}</td>
         
-        <td>
+        <td class="tablerow">
           <span class="action-link" role="button" tabindex="0" (click)="loadDesignationToEdit(designation.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
           <span class="action-link" role="button" tabindex="0" (click)="deleteDesignation(designation.id)">{{'Delete'|translate}}</span>
