--- a/src/app/components/employee-type/employee-type.component.html
+++ b/src/app/components/employee-type/employee-type.component.html
@@ -5,14 +5,22 @@
       <div class="heading4">{{'Employee Types'|translate}}</div>
     </header>
     <div class="addbtn">
-      <button class="btn btn-primary adduser"  type="button" data-toggle="modal" data-target="#myModal">{{'Add New EmployeeType'|translate}}
+      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'Add New EmployeeType'|translate}}
       </button>
+      <div class="input-group input-group-lg searchButton">
+        <input type="text" class="form-control" style="height: 40px" placeholder="Search By Name" [(ngModel)]="name">
+        <div class="input-group-btn">
+          <button class="btn btn-default" style="height: 40px" type="submit">
+            <i class="glyphicon glyphicon-search"></i>
+          </button>
+        </div>
+      </div>
     </div>
     <div layout="row" class="userlist ">{{'Employee Type List'|translate}}</div>
     <table class="table table-striped table-hover settable">
       <thead>
         <tr>
-            <th>{{ 'No' | translate }}</th>
+          <th>{{ 'No' | translate }}</th>
           <th>{{ 'Name' | translate }}</th>
           <th>{{ 'SeekLeave' | translate }}</th>
           <th>{{ 'PaidLeave' | translate }}</th>
@@ -20,14 +28,15 @@
           <th style="margin-left: 60%">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let employeeType of allEmployeetype">
-          <td class="tablerow">{{employeeType.id}}</td>
+      <tr *ngFor="let employeeType of allEmployeetype | filter:name">
+        <td class="tablerow">{{employeeType.id}}</td>
         <td class="tablerow">{{employeeType.type}}</td>
-        <td>{{employeeType.seekLeave}}</td>
-        <td>{{employeeType.paidLeave}}</td>
-        <td>{{employeeType.totalLeave}}</td>
-        <td>
-          <span class="action-link" role="button" tabindex="0" (click)="loadEmployeeTypeToEdit(employeeType.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
+        <td class="tablerow">{{employeeType.seekLeave}}</td>
+        <td class="tablerow">{{employeeType.paidLeave}}</td>
+        <td class="tablerow">{{employeeType.totalLeave}}</td>
+        <td class="tablerow">
+          <span class="action-link" role="button" tabindex="0" (click)="loadEmployeeTypeToEdit(employeeType.id)" data-toggle="modal"
+            data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
           <span class="action-link" role="button" tabindex="0" (click)="deleteEmployeeType(employeeType.id)">{{'Delete'|translate}}</span>
         </td>
@@ -36,53 +45,57 @@
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <form [formGroup]="employeetypeForm" (ngSubmit)="onEmployeeTypeFormSubmit()">
-  <div class="modal-dialog modaldialog">
-    <div class="modal-content" style="    height: 500px;">
-      <div class="modal-header dialog">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h2 class="modal-title modaltitle">{{'Add New EmployeeType'|translate}}</h2>
-      </div>
-      <div class="modal-body">
-        <div class="row" style="    margin-top: 30px">
-          <div class=" form-group col-lg-6" style="margin-left: 35px;">
-            <label class="label-name " >{{ 'EmployeeTypeName' | translate }}</label>
-            <br>
-            <input type="text" *ngIf="employeetypeForm.get('type')" formControlName="type" id="type" name="type" class="loginUserid" placeholder="Employeetype" >
-            <app-control-messages [control]="employeetypeForm.controls.type"></app-control-messages>
-          </div>
-  
-          <div class="col-lg-offset-5">
-            <div class=" form-group col-lg-6">
-              <label class="label-name " > {{ 'SeekLeave' | translate }}</label>
-              <input type="number" *ngIf="employeetypeForm.get('seekLeave')" formControlName="seekLeave" onkeypress='return event.charCode >= 48 && event.charCode <= 57' class="loginUserid" placeholder="Seek Leave" >
-              <app-control-messages [control]="employeetypeForm.controls.seekLeave"></app-control-messages>
-            </div>
-          </div>
+  <form [formGroup]="employeetypeForm" (ngSubmit)="onEmployeeTypeFormSubmit()">
+    <div class="modal-dialog modaldialog">
+      <div class="modal-content" style="    height: 500px;">
+        <div class="modal-header dialog">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h2 class="modal-title modaltitle">{{'Add New EmployeeType'|translate}}</h2>
         </div>
-        <div class="row" style="    margin-top: 30px">
+        <div class="modal-body">
+          <div class="row" style="    margin-top: 30px">
             <div class=" form-group col-lg-6" style="margin-left: 35px;">
-              <label class="label-name " >{{ 'PaidLeave' | translate }}</label>
+              <label class="label-name ">{{ 'EmployeeTypeName' | translate }}</label>
               <br>
-              <input type="number" *ngIf="employeetypeForm.get('paidLeave')" formControlName="paidLeave" onkeypress='return event.charCode >= 48 && event.charCode <= 57' class="loginUserid" placeholder="Paid Leave">
-              <app-control-messages [control]="employeetypeForm.controls.paidLeave"></app-control-messages>
+              <input type="text" *ngIf="employeetypeForm.get('type')" formControlName="type" id="type" name="type" class="loginUserid"
+                placeholder="Employeetype">
+              <app-control-messages [control]="employeetypeForm.controls.type"></app-control-messages>
             </div>
-    
+
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
-                <label class="label-name " > {{ 'TotalLeave' | translate }}</label>
-                <input type="number" *ngIf="employeetypeForm.get('totalLeave')" formControlName="totalLeave" onkeypress='return event.charCode >= 48 && event.charCode <= 57' class="loginUserid" placeholder="Total Leave">
+                <label class="label-name "> {{ 'SeekLeave' | translate }}</label>
+                <input type="number" *ngIf="employeetypeForm.get('seekLeave')" formControlName="seekLeave" onkeypress='return event.charCode >= 48 && event.charCode <= 57'
+                  class="loginUserid" placeholder="Seek Leave">
+                <app-control-messages [control]="employeetypeForm.controls.seekLeave"></app-control-messages>
+              </div>
+            </div>
+          </div>
+          <div class="row" style="    margin-top: 30px">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;">
+              <label class="label-name ">{{ 'PaidLeave' | translate }}</label>
+              <br>
+              <input type="number" *ngIf="employeetypeForm.get('paidLeave')" formControlName="paidLeave" onkeypress='return event.charCode >= 48 && event.charCode <= 57'
+                class="loginUserid" placeholder="Paid Leave">
+              <app-control-messages [control]="employeetypeForm.controls.paidLeave"></app-control-messages>
+            </div>
+
+            <div class="col-lg-offset-5">
+              <div class=" form-group col-lg-6">
+                <label class="label-name "> {{ 'TotalLeave' | translate }}</label>
+                <input type="number" *ngIf="employeetypeForm.get('totalLeave')" formControlName="totalLeave" onkeypress='return event.charCode >= 48 && event.charCode <= 57'
+                  class="loginUserid" placeholder="Total Leave">
                 <app-control-messages [control]="employeetypeForm.controls.totalLeave"></app-control-messages>
               </div>
             </div>
           </div>
-        <div class="savebtn">
-          <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!employeetypeForm.valid">{{'Save'|translate}}</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
+          <div class="savebtn">
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!employeetypeForm.valid">{{'Save'|translate}}</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
         margin-left: 20px;">Close</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
   </form>
-  </div>
+</div>
