--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -7,6 +7,12 @@
     <div class="addbtn">
       <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'Add New Employee'|translate}}
       </button>
+      <div class="input-group input-group-lg searchButton">
+        <input type="text" class="form-control" style="height: 40px" placeholder="Search By Name" [(ngModel)]="name">
+        <div class="input-group-btn">
+          <button class="btn btn-default" style="height: 40px" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+        </div>
+      </div>
     </div>
     <div layout="row" class="userlist ">{{'Employee List'|translate}}</div>
     <table class="table table-striped table-hover settable">
@@ -23,17 +29,17 @@
           <th style="margin-left: 60%">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let employee of allEmployee">
+      <tr *ngFor="let employee of allEmployee | filter:name">
         <td class="tablerow">{{employee.id}}</td>
         <td class="tablerow">{{employee.userid}}</td>
-        <td>{{employee.firstName}}</td>
-        <td>{{employee.lastName}}</td>
-        <td>{{employee.phoneNumber}}</td>
-        <td>{{employee.dateOfJoining}}</td>
-        <td>{{employee.usertype.usertypeName}}</td>
-        <td>{{employee.employeetype.type}}</td>
+        <td class="tablerow">{{employee.firstName}}</td>
+        <td class="tablerow">{{employee.lastName}}</td>
+        <td class="tablerow">{{employee.phoneNumber}}</td>
+        <td class="tablerow">{{employee.dateOfJoining}}</td>
+        <td class="tablerow">{{employee.usertype.usertypeName}}</td>
+        <td class="tablerow">{{employee.employeetype.type}}</td>
 
-        <td>
+        <td class="tablerow">
           <span class="action-link" role="button" tabindex="0" (click)="loadEmployeeToEdit(employee.id)" data-toggle="modal"
             data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
