--- a/src/app/components/holiday/holiday.component.html
+++ b/src/app/components/holiday/holiday.component.html
@@ -5,25 +5,34 @@
       <div class="heading4">{{'Holiday'|translate}}</div>
     </header>
     <div class="addbtn">
-      <button class="btn btn-primary adduser"  type="button" data-toggle="modal" data-target="#myModal">{{'Add New Holiday'|translate}}
+      <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'Add New Holiday'|translate}}
       </button>
+      <div class="input-group input-group-lg searchButton">
+        <input type="text" class="form-control" style="height: 40px" placeholder="Search By Name" [(ngModel)]="name">
+        <div class="input-group-btn">
+          <button class="btn btn-default" style="height: 40px" type="submit">
+            <i class="glyphicon glyphicon-search"></i>
+          </button>
+        </div>
+      </div>
     </div>
     <div layout="row" class="userlist ">{{'HolidayList'|translate}}</div>
     <table class="table table-striped table-hover settable">
       <thead>
         <tr>
-            <th>{{ 'No' | translate }}</th>
+          <th>{{ 'No' | translate }}</th>
           <th>{{ 'Name' | translate }}</th>
           <th>{{ 'Date' | translate }}</th>
           <th style="margin-left: 60%">Action</th>
+          
         </tr>
       </thead>
-      <tr *ngFor="let holiday of allHolidayList">
-          <td class="tablerow">{{holiday.id}}</td>
-          
+      <tr *ngFor="let holiday of allHolidayList | filter:name">
+        <td class="tablerow">{{holiday.id}}</td>
+
         <td class="tablerow">{{holiday.holidayName}}</td>
-        <td>{{holiday.holidayDate}}</td>
-        <td>
+        <td class="tablerow">{{holiday.holidayDate}}</td>
+        <td class="tablerow">
           <span class="action-link" role="button" tabindex="0" (click)="loadHolidayToEdit(holiday.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
           <span class="action-link" role="button" tabindex="0" (click)="deleteHoliday(holiday.id)">{{'Delete'|translate}}</span>
@@ -34,36 +43,38 @@
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <form [formGroup]="holidayForm" (ngSubmit)="onHolidayFormSubmit()">
-<div class="modal-dialog modaldialog">
-  <div class="modal-content" style="    height: 500px;">
-    <div class="modal-header dialog">
-      <button type="button" class="close" data-dismiss="modal">&times;</button>
-      <h2 class="modal-title modaltitle">{{'Add New Holiday'|translate}}</h2>
-    </div>
-    <div class="modal-body">
-      <div class="row" style="    margin-top: 30px">
-        <div class=" form-group col-lg-6" style="margin-left: 35px;">
-          <label class="label-name " >{{ 'HolidayName' | translate }}</label>
-          <br>
-          <input type="text" *ngIf="holidayForm.get('holidayName')" formControlName="holidayName" id="holidayName" name="holidayName" class="loginUserid" placeholder="Name">
-          <app-control-messages [control]="holidayForm.controls.holidayName"></app-control-messages>
+    <div class="modal-dialog modaldialog">
+      <div class="modal-content" style="    height: 500px;">
+        <div class="modal-header dialog">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h2 class="modal-title modaltitle">{{'Add New Holiday'|translate}}</h2>
         </div>
+        <div class="modal-body">
+          <div class="row" style="    margin-top: 30px">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;">
+              <label class="label-name ">{{ 'HolidayName' | translate }}</label>
+              <br>
+              <input type="text" *ngIf="holidayForm.get('holidayName')" formControlName="holidayName" id="holidayName" name="holidayName"
+                class="loginUserid" placeholder="Name">
+              <app-control-messages [control]="holidayForm.controls.holidayName"></app-control-messages>
+            </div>
 
-        <div class="col-lg-offset-5">
-          <div class=" form-group col-lg-6">
-            <label class="label-name " > {{ 'Date' | translate }}</label>
-            <input type="date" *ngIf="holidayForm.get('holidayDate')" formControlName="holidayDate" id="holidayDate" name="holidayDate" class="loginUserid" placeholder="Description">
-            <app-control-messages [control]="holidayForm.controls.holidayDate"></app-control-messages>
+            <div class="col-lg-offset-5">
+              <div class=" form-group col-lg-6">
+                <label class="label-name "> {{ 'Date' | translate }}</label>
+                <input type="date" *ngIf="holidayForm.get('holidayDate')" formControlName="holidayDate" id="holidayDate" name="holidayDate"
+                  class="loginUserid" placeholder="Description">
+                <app-control-messages [control]="holidayForm.controls.holidayDate"></app-control-messages>
+              </div>
+            </div>
+          </div>
+          <div class="savebtn">
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!holidayForm.valid">{{'Save'|translate}}</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
+      margin-left: 20px;">Close</button>
           </div>
         </div>
       </div>
-      <div class="savebtn">
-        <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!holidayForm.valid">{{'Save'|translate}}</button>
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
-      margin-left: 20px;">Close</button>
-      </div>
     </div>
-  </div>
-</div>
-</form>
+  </form>
 </div>
