--- a/src/app/components/leave/leave.component.html
+++ b/src/app/components/leave/leave.component.html
@@ -7,6 +7,12 @@
     <div class="addbtn">
       <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">Add Employee Leave
       </button>
+      <div class="input-group input-group-lg searchButton">
+          <input type="date" class="form-control" style="height: 40px" placeholder="Search By Name" [(ngModel)]="fromDate">
+          <div class="input-group-btn">
+            <button class="btn btn-default" style="height: 40px" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+          </div>
+        </div>
     </div>
     <div layout="row" class="userlist ">{{'Employeee Leave List'|translate}}</div>
     <table class="table table-striped table-hover settable">
@@ -22,15 +28,15 @@
           <th style="margin-left: 60%">Action</th>
         </tr>
       </thead>
-      <tr *ngFor="let leave of allLeave">
+      <tr *ngFor="let leave of allLeave | filter:fromDate">
         <td class="tablerow">{{leave.id}}</td>
         <td class="tablerow">{{leave.employee.userid}}</td>
-        <td>{{leave.subject}}</td>
-        <td>{{leave.fromDate}}</td>
-        <td>{{leave.toDate}}</td>
-        <td>{{leave.leavetype.name}}</td>
+        <td class="tablerow">{{leave.subject}}</td>
+        <td class="tablerow">{{leave.fromDate}}</td>
+        <td class="tablerow">{{leave.toDate}}</td>
+        <td class="tablerow">{{leave.leavetype.name}}</td>
 
-        <td>
+        <td class="tablerow">
           <span class="action-link" role="button" tabindex="0" (click)="loadLeaveToEdit(leave.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
           <span class="action-link" role="button" tabindex="0" (click)="deleteLeave(leave.id)">{{'Delete'|translate}}</span>
@@ -69,7 +75,7 @@
           </div>
           <div class="row" style="    margin-top: 30px">
             <div class=" form-group col-lg-6" style="margin-left: 35px;">
-              <label class="label-name ">{{ 'FormDate' | translate }}</label>
+              <label class="label-name ">{{ 'FromDate' | translate }}</label>
               <br>
               <input type="date" *ngIf="leaveForm.get('fromDate')"  formControlName="fromDate" class="loginUserid">
               <app-control-messages [control]="leaveForm.controls.fromDate"></app-control-messages>
