--- a/src/app/components/usertype/usertype.component.html
+++ b/src/app/components/usertype/usertype.component.html
@@ -5,25 +5,35 @@
       <div class="heading4">{{'User Types'|translate}}</div>
     </header>
     <div class="addbtn">
-      <button class="btn btn-primary adduser"  type="button" data-toggle="modal" data-target="#myModal">{{'Add New User'|translate}}
+      <button class="btn  adduser" type="button" data-toggle="modal" data-target="#myModal">
+        <span>{{'Add New User'|translate}}</span>
       </button>
+      <div class="input-group input-group-lg searchButton">
+        <input type="text" class="form-control" style="height: 40px" placeholder="Search By Name" [(ngModel)]="name">
+        <div class="input-group-btn">
+          <button class="btn btn-default" style="height: 40px" type="submit">
+            <i class="glyphicon glyphicon-search"></i>
+          </button>
+        </div>
+      </div>
     </div>
+
     <div layout="row" class="userlist ">{{'User Type List'|translate}}</div>
     <table class="table table-striped table-hover settable">
       <thead>
         <tr>
-            <th>{{ 'No' | translate }}</th>
+          <th>{{ 'No' | translate }}</th>
           <th>{{ 'Name' | translate }}</th>
           <th>{{ 'Description' | translate }}</th>
           <th style="margin-left: 60%">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let usertype of allUsertypes">
-          <td class="tablerow">{{usertype.id}}</td>
-          
+      <tr *ngFor="let usertype of allUsertypes | filter:name">
+        <td class="tablerow">{{usertype.id}}</td>
+
         <td class="tablerow">{{usertype.usertypeName}}</td>
-        <td>{{usertype.description}}</td>
-        <td>
+        <td class="tablerow">{{usertype.description}}</td>
+        <td class="tablerow">
           <span class="action-link" role="button" tabindex="0" (click)="loadUserTypeToEdit(usertype.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
           <span class="action-link" role="button" tabindex="0" (click)="deleteUserType(usertype.id)">{{'Delete'|translate}}</span>
@@ -33,37 +43,40 @@
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <form [formGroup]="usertypeForm" (ngSubmit)="onUserTypeFormSubmit()">
-  <div class="modal-dialog modaldialog">
-    <div class="modal-content" style="    height: 500px;">
-      <div class="modal-header dialog">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h2 class="modal-title modaltitle">{{'Add New User Type'|translate}}</h2>
-      </div>
-      <div class="modal-body">
-        <div class="row" style="    margin-top: 30px">
-          <div class=" form-group col-lg-6" style="margin-left: 35px;">
-            <label class="label-name " >{{ 'Name' | translate }}</label>
-            <br>
-            <input type="text" *ngIf="usertypeForm.get('usertypeName')" formControlName="usertypeName" id="usertypeName" name="usertypeName" class="loginUserid" placeholder="Name">
-            <app-control-messages [control]="usertypeForm.controls.usertypeName"></app-control-messages>
-          </div>
+  <form [formGroup]="usertypeForm" (ngSubmit)="onUserTypeFormSubmit()">
+    <div class="modal-dialog modaldialog">
+      <div class="modal-content" style="    height: 500px;">
+        <div class="modal-header dialog">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h2 class="modal-title modaltitle">{{'Add New User Type'|translate}}</h2>
+        </div>
+        <div class="modal-body">
+          <div class="row" style="    margin-top: 30px">
+            <div class=" form-group col-lg-6" style="margin-left: 35px;">
+              <label class="label-name ">{{ 'Name' | translate }}</label>
+              <br>
+              <input type="text" *ngIf="usertypeForm.get('usertypeName')" formControlName="usertypeName" id="usertypeName" name="usertypeName"
+                class="loginUserid" placeholder="Name">
+              <app-control-messages [control]="usertypeForm.controls.usertypeName"></app-control-messages>
+            </div>
 
-          <div class="col-lg-offset-5">
-            <div class=" form-group col-lg-6">
-              <label class="label-name " > {{ 'Description' | translate }}</label>
-              <input type="text" *ngIf="usertypeForm.get('description')" formControlName="description" id="description" name="description" class="loginUserid" placeholder="Description">
-              <app-control-messages [control]="usertypeForm.controls.description"></app-control-messages>
+            <div class="col-lg-offset-5">
+              <div class=" form-group col-lg-6">
+                <label class="label-name "> {{ 'Description' | translate }}</label>
+                <input type="text" formControlName="description" id="description" name="description"
+                  class="loginUserid" placeholder="Description">
+                <app-control-messages [control]="usertypeForm.controls.description"></app-control-messages>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="savebtn">
-          <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!usertypeForm.valid">{{'Save'|translate}}</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
-        margin-left: 20px;">Close</button>
+          <div class="savebtn">
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!usertypeForm.valid" >{{'Save'|translate}}</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
+        margin-left: 20px;">{{'Close'|translate}}</button>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-</form>
+  </form>
 </div>
+<div id="snackbar" ></div>
