--- a/src/styles.css
+++ b/src/styles.css
@@ -35,6 +35,8 @@
     
     width: 17%;
     height: 40px;
+    background-color: #111111e8;
+    color: white
 }
 .userlist {
     margin-left: 2.5%;
@@ -128,4 +130,10 @@
     color:red;
  padding-top: 7px;
  width: 250px 
+}
+.searchButton{
+    margin-left: 30%;
+    width: 24%;
+    height: 20%;
+    margin-top: -3.9%;
 }
