--- a/src/app/components/attendance/attendance.component.html
+++ b/src/app/components/attendance/attendance.component.html
@@ -1,9 +1,11 @@
+
 <app-home></app-home>
 <div class=" main-class">
   <div class="primary-container">
     <header class="header">
       <div class="heading4">{{'Employee Attendance' | translate}}</div>
     </header>
+   
     <div class="addbtn">
       <button class="btn btn-primary adduser" type="button" data-toggle="modal" data-target="#myModal">{{'Add Employee Attendance'| translate}}
       </button>
@@ -17,7 +19,7 @@
       </div>
     </div>
     <div layout="row" class="userlist ">{{'Attendance List' | translate}}</div>
-    <table class="table table-striped table-hover table-fixed settable"[mfData]="allAttendance" #mf="mfDataTable"  (mfSelectedEntities)="setSelectedEntities($event)" >
+    <table class="table table-striped table-hover table-fixed settable" >
       <thead>
         <tr>
           <th class="col-xs-1">{{ 'No' | translate }}</th>
@@ -25,12 +27,12 @@
           <th class="col-xs-2">{{ 'Intime' | translate }}</th>
           <th class="col-xs-2">{{ 'Outtime' | translate }}</th>
           <th class="col-xs-2" style="margin-right: -20px;">{{ 'Date' | translate }}</th>
-          <mfDefaultSorter by="status"  class="col-xs-1">{{ 'Status' | translate }}</mfDefaultSorter >
+          <th  class="col-xs-1">{{ 'Status' | translate }}</th >
           <th class="col-xs-2" style="margin-left: 20px">Action</th>
         </tr>
 
       </thead>
-      <tr *ngFor="let attendance of allAttendance | orderBy : Attendance">
+      <tr *ngFor="let attendance of allAttendance | orderBy : Attendance | paginate: { itemsPerPage: 8, currentPage: p} ">
           
         <td class="tablerow col-xs-1">{{attendance.id}}</td>
         <td class="tablerow col-xs-2  ">{{attendance.employee.userid}}</td>
@@ -45,12 +47,18 @@
           <span class="action-link" role="button" tabindex="0" (click)="deleteEmployeeAttendance(attendance.id)">{{'Delete'|translate}}</span>
         </td>
       </tr>
+     
     </table>
+    <div style="margin-left: 60%" >
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
+    
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <form [formGroup]="attendanceForm" (ngSubmit)="onEmployeeAttendanceFormSubmit()">
     <div class="modal-dialog modaldialog">
+        <div id="snackbar"[innerHTML]="toastMessage"></div>
       <div class="modal-content" style="    height: 500px;">
         <div class="modal-header dialog">
           <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -93,7 +101,7 @@
             </div>
           </div>
           <div class="savebtn">
-            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid">{{'Save'|translate}}</button>
+            <button type="submit" class="btn btn-secondary" style="width: 30%;" [disabled]="!attendanceForm.valid" (click)="myFunction()">{{'Save'|translate}}</button>
             <button type="button" class="btn btn-secondary" data-dismiss="modal" style="width: 30%;
       margin-left: 20px;">Close</button>
           </div>
@@ -102,4 +110,3 @@
     </div>
   </form>
 </div>
-<div id="snackbar"></div>
