--- a/src/app/components/daily-task/daily-task.component.html
+++ b/src/app/components/daily-task/daily-task.component.html
@@ -9,36 +9,35 @@
       </button>
     </div>
     <div layout="row" class="userlist ">{{'Daily Task List' | translate}}</div>
-    <table class="table table-striped table-hover settable">
+    <table class="table table-striped table-hover table-fixed settable">
       <thead>
         <tr>
-          <th>{{ 'No' | translate }}</th>
-          <th>EmployeeId</th>
-          <th>{{ 'Date' | translate }}</th>
-          <th>{{ 'TaskName' | translate }}</th>
-          <th>{{ 'EstimationTime' | translate }}</th>
-          <th>{{ 'StartTime' | translate }}</th>
-          <th>{{ 'EndTime' | translate }}</th>
-          <th>{{ 'Status' | translate }}</th>
-          <th style="margin-left: 60%">Action</th>
+          <th class="col-xs-1">{{ 'No' | translate }}</th>
+          <th class="col-xs-2">EmployeeId</th>
+          <th class="col-xs-2"> {{ 'Date' | translate }}</th>
+          <th class="col-xs-2" style="margin-right: -20px;">{{ 'TaskName' | translate }}</th>
+          <th class="col-xs-2">{{ 'EstimationTime' | translate }}</th>
+          <th class="col-xs-1" >{{ 'Status' | translate }}</th>
+          <th class="col-xs-2">Action</th>
         </tr>
       </thead>
-      <tr *ngFor="let dailyTask of allDailyTask">
-        <td class="tablerow">{{dailyTask.id}}</td>
-        <td class="tablerow">{{dailyTask.employee.userid}}</td>
-        <td class="tablerow">{{dailyTask.date}}</td>
-        <td class="tablerow">{{dailyTask.taskName}}</td>
-        <td class="tablerow">{{dailyTask.estimationTime}}</td>
-        <td class="tablerow">{{dailyTask.starttime}}</td>
-        <td class="tablerow">{{dailyTask.endtime}}</td>
-        <td class="tablerow">{{dailyTask.status}}</td>
-        <td class="tablerow">
+      <tr *ngFor="let dailyTask of allDailyTask| paginate: { itemsPerPage: 8, currentPage: p}">
+        <td class="tablerow col-xs-1">{{dailyTask.id}}</td>
+        <td class="tablerow col-xs-2">{{dailyTask.employee.userid}}</td>
+        <td class="tablerow col-xs-2">{{dailyTask.date}}</td>
+        <td class="tablerow col-xs-2">{{dailyTask.taskName}}</td>
+        <td class="tablerow col-xs-2" style="margin-right: -30px">{{dailyTask.estimationTime}}</td>
+        <td class="tablerow col-xs-1" >{{dailyTask.status}}</td>
+        <td class="tablerow col-xs-2">
           <span class="action-link" role="button" tabindex="0" (click)="loadDailyTaskToEdit(dailyTask.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
           <span class="action-link" role="button" tabindex="0" (click)="deleteDailyTask(dailyTask.id)">{{'Delete'|translate}}</span>
         </td>
       </tr>
     </table>
+    <div style="margin-left: 60%">
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -107,16 +106,16 @@
               <br>
               <textarea type="text" rows="4" cols="50" name="comment" form="usrform" *ngIf="dailyTaskForm.get('description')" formControlName="description"
                 style=" margin-left: 23px"></textarea>
-              <app-control-messages  [control]="dailyTaskForm.controls.description"></app-control-messages>
+              <app-control-messages [control]="dailyTaskForm.controls.description"></app-control-messages>
             </div>
             <div class="col-lg-offset-5">
               <div class=" form-group col-lg-6">
                 <label class="label-name "> {{ 'Status' | translate }}</label>
-                <select  class=" loginUserid" formControlName="status">
+                <select class=" loginUserid" formControlName="status">
                   <option value="">--Select--</option>
                   <option value="Completed">Completed</option>
                   <option value="InComplete">InComplete</option>
-                <app-control-messages [control]="dailyTaskForm.controls.description"></app-control-messages>
+                  <app-control-messages [control]="dailyTaskForm.controls.description"></app-control-messages>
                 </select>
               </div>
             </div>
