--- a/src/app/components/designation/designation.component.html
+++ b/src/app/components/designation/designation.component.html
@@ -17,22 +17,22 @@
         </div>
     </div>
     <div layout="row" class="userlist ">{{'Designation List'|translate}}</div>
-    <table class="table table-striped table-hover settable">
+    <table class="table table-striped table-hover table-fixed settable">
       <thead>
         <tr>
-            <th>{{ 'No' | translate }}</th>
-          <th>{{ 'Name' | translate }}</th>
-          <th>{{ 'Band' | translate }}</th>
-          <th>{{ 'Level' | translate }}</th>
+            <th class="col-xs-1" >{{ 'No' | translate }}</th>
+          <th class="col-xs-3">{{ 'Name' | translate }}</th>
+          <th class="col-xs-3">{{ 'Band' | translate }}</th>
+          <th class="col-xs-3">{{ 'Level' | translate }}</th>
 
-          <th style="margin-left: 60%">{{ 'Action' | translate }}</th>
+          <th >{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let designation of allDesignation | filter:name">
-          <td class="tablerow">{{designation.id}}</td>
-        <td class="tablerow">{{designation.name}}</td>
-        <td class="tablerow">{{designation.band}}</td>
-        <td class="tablerow">{{designation.level}}</td>
+      <tr *ngFor="let designation of allDesignation | filter:name | paginate: { itemsPerPage: 8, currentPage: p} ">
+          <td class="tablerow col-xs-1">{{designation.id}}</td>
+        <td class="tablerow col-xs-3">{{designation.name}}</td>
+        <td class="tablerow col-xs-3">{{designation.band}}</td>
+        <td class="tablerow col-xs-3">{{designation.level}}</td>
         
         <td class="tablerow">
           <span class="action-link" role="button" tabindex="0" (click)="loadDesignationToEdit(designation.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
@@ -41,6 +41,9 @@
         </td>
       </tr>
     </table>
+    <div style="margin-left: 60%" >
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
