--- a/src/app/components/employee-type/employee-type.component.html
+++ b/src/app/components/employee-type/employee-type.component.html
@@ -17,24 +17,24 @@
       </div>
     </div>
     <div layout="row" class="userlist ">{{'Employee Type List'|translate}}</div>
-    <table class="table table-striped table-hover settable">
+    <table class="table table-striped table-hover table-fixed  settable">
       <thead>
         <tr>
-          <th>{{ 'No' | translate }}</th>
-          <th>{{ 'Name' | translate }}</th>
-          <th>{{ 'SeekLeave' | translate }}</th>
-          <th>{{ 'PaidLeave' | translate }}</th>
-          <th>{{ 'TotalLeave' | translate }}</th>
-          <th style="margin-left: 60%">{{ 'Action' | translate }}</th>
+          <th class="col-xs-1">{{ 'No' | translate }}</th>
+          <th class="col-xs-2">{{ 'Name' | translate }}</th>
+          <th class="col-xs-2">{{ 'SeekLeave' | translate }}</th>
+          <th class="col-xs-2">{{ 'PaidLeave' | translate }}</th>
+          <th class="col-xs-2">{{ 'TotalLeave' | translate }}</th>
+          <th class="col-xs-2" style="margin-left: 40px">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let employeeType of allEmployeetype | filter:name">
-        <td class="tablerow">{{employeeType.id}}</td>
-        <td class="tablerow">{{employeeType.type}}</td>
-        <td class="tablerow">{{employeeType.seekLeave}}</td>
-        <td class="tablerow">{{employeeType.paidLeave}}</td>
-        <td class="tablerow">{{employeeType.totalLeave}}</td>
-        <td class="tablerow">
+      <tr *ngFor="let employeeType of allEmployeetype | filter:name| paginate: { itemsPerPage: 8, currentPage: p}">
+        <td class="tablerow col-xs-1 ">{{employeeType.id}}</td>
+        <td class="tablerow col-xs-2">{{employeeType.type}}</td>
+        <td class="tablerow col-xs-2">{{employeeType.seekLeave}}</td>
+        <td class="tablerow col-xs-2">{{employeeType.paidLeave}}</td>
+        <td class="tablerow col-xs-2">{{employeeType.totalLeave}}</td>
+        <td class="tablerow col-xs-3">
           <span class="action-link" role="button" tabindex="0" (click)="loadEmployeeTypeToEdit(employeeType.id)" data-toggle="modal"
             data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
@@ -42,6 +42,9 @@
         </td>
       </tr>
     </table>
+    <div style="margin-left: 60%" >
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
