--- a/src/app/components/employee/employee.component.html
+++ b/src/app/components/employee/employee.component.html
@@ -15,31 +15,24 @@
       </div>
     </div>
     <div layout="row" class="userlist ">{{'Employee List'|translate}}</div>
-    <table class="table table-striped table-hover settable">
+    <table class="table table-striped table-hover table-fixed settable">
       <thead>
         <tr>
-          <th>{{ 'No' | translate }}</th>
-          <th>{{ 'UserId' | translate }}</th>
-          <th>{{ 'FirstName' | translate }}</th>
-          <th>{{ 'LastName' | translate }}</th>
-          <th>{{ 'PhoneNumber' | translate }}</th>
-          <th>{{ 'DateOfJoining' | translate }}</th>
-          <th>{{ 'UserType' | translate }}</th>
-          <th>{{ 'EmployeeType' | translate }}</th>
-          <th style="margin-left: 60%">{{ 'Action' | translate }}</th>
+          <th class="col-xs-1">{{ 'No' | translate }}</th>
+          <th class="col-xs-2">{{ 'UserId' | translate }}</th>
+          <th class="col-xs-2">{{ 'FirstName' | translate }}</th>
+          <th class="col-xs-2">{{ 'LastName' | translate }}</th>
+          <th class="col-xs-2">{{ 'UserType' | translate }}</th>
+          <th class="col-xs-2" style="margin-left: 40px">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let employee of allEmployee | filter:name">
-        <td class="tablerow">{{employee.id}}</td>
-        <td class="tablerow">{{employee.userid}}</td>
-        <td class="tablerow">{{employee.firstName}}</td>
-        <td class="tablerow">{{employee.lastName}}</td>
-        <td class="tablerow">{{employee.phoneNumber}}</td>
-        <td class="tablerow">{{employee.dateOfJoining}}</td>
-        <td class="tablerow">{{employee.usertype.usertypeName}}</td>
-        <td class="tablerow">{{employee.employeetype.type}}</td>
-
-        <td class="tablerow">
+      <tr *ngFor="let employee of allEmployee | filter:name| paginate: { itemsPerPage: 8, currentPage: p} ">
+        <td class="tablerow col-xs-1">{{employee.id}}</td>
+        <td class="tablerow col-xs-2" >{{employee.userid}}</td>
+        <td class="tablerow col-xs-2">{{employee.firstName}}</td>
+        <td class="tablerow col-xs-2">{{employee.lastName}}</td>
+        <td class="tablerow col-xs-2">{{employee.usertype.usertypeName}}</td>
+        <td class="tablerow col-xs-3">
           <span class="action-link" role="button" tabindex="0" (click)="loadEmployeeToEdit(employee.id)" data-toggle="modal"
             data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
@@ -47,6 +40,9 @@
         </td>
       </tr>
     </table>
+    <div style="margin-left: 60%" >
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
