--- a/src/app/components/holiday/holiday.component.html
+++ b/src/app/components/holiday/holiday.component.html
@@ -17,28 +17,29 @@
       </div>
     </div>
     <div layout="row" class="userlist ">{{'HolidayList'|translate}}</div>
-    <table class="table table-striped table-hover settable">
+    <table class="table table-striped table-hover table-fixed  settable">
       <thead>
         <tr>
-          <th>{{ 'No' | translate }}</th>
-          <th>{{ 'Name' | translate }}</th>
-          <th>{{ 'Date' | translate }}</th>
-          <th style="margin-left: 60%">Action</th>
-          
+          <th class="col-xs-2">{{ 'No' | translate }}</th>
+          <th class="col-xs-3">{{ 'Name' | translate }}</th>
+          <th class="col-xs-3">{{ 'Date' | translate }}</th>
+          <th class="col-xs-3" style="margin-left: 40px">Action</th>  
         </tr>
       </thead>
-      <tr *ngFor="let holiday of allHolidayList | filter:name">
-        <td class="tablerow">{{holiday.id}}</td>
-
-        <td class="tablerow">{{holiday.holidayName}}</td>
-        <td class="tablerow">{{holiday.holidayDate}}</td>
-        <td class="tablerow">
+      <tr *ngFor="let holiday of allHolidayList | filter:name| paginate: { itemsPerPage: 8, currentPage: p}">
+        <td class="tablerow col-xs-2">{{holiday.id}}</td>
+        <td class="tablerow col-xs-3">{{holiday.holidayName}}</td>
+        <td class="tablerow col-xs-3">{{holiday.holidayDate}}</td>
+        <td class="tablerow col-xs-4">
           <span class="action-link" role="button" tabindex="0" (click)="loadHolidayToEdit(holiday.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
           <span class="action-link" role="button" tabindex="0" (click)="deleteHoliday(holiday.id)">{{'Delete'|translate}}</span>
         </td>
       </tr>
     </table>
+    <div style="margin-left: 60%" >
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
