--- a/src/app/components/leave/leave.component.html
+++ b/src/app/components/leave/leave.component.html
@@ -15,34 +15,35 @@
         </div>
     </div>
     <div layout="row" class="userlist ">{{'Employeee Leave List'|translate}}</div>
-    <table class="table table-striped table-hover settable">
+    <table class="table table-striped table-hover table-fixed settable">
       <thead>
         <tr>
-          <th>{{ 'No' | translate }}</th>
-          <th>EmployeeId</th>
-          <th>{{ 'Reason' | translate }}</th>
-          <th>{{ 'FromDate' | translate }}</th>
-          <th>{{ 'Todate' | translate }}</th>
-          <th>{{ 'Leave Type' | translate }}</th>
-
-          <th style="margin-left: 60%">Action</th>
+          <th class="col-xs-1">{{ 'No' | translate }}</th>
+          <th class="col-xs-2">EmployeeId</th>
+          <th class="col-xs-2">{{ 'Reason' | translate }}</th>
+          <th class="col-xs-2">{{ 'FromDate' | translate }}</th>
+          <th class="col-xs-2">{{ 'Todate' | translate }}</th>
+         
+          <th class="col-xs-3">Action</th>
         </tr>
       </thead>
-      <tr *ngFor="let leave of allLeave | filter:fromDate">
-        <td class="tablerow">{{leave.id}}</td>
-        <td class="tablerow">{{leave.employee.userid}}</td>
-        <td class="tablerow">{{leave.subject}}</td>
-        <td class="tablerow">{{leave.fromDate}}</td>
-        <td class="tablerow">{{leave.toDate}}</td>
-        <td class="tablerow">{{leave.leavetype.name}}</td>
-
-        <td class="tablerow">
+      <tr *ngFor="let leave of allLeave | filter:fromDate| paginate: { itemsPerPage: 8, currentPage: p}">
+        <td class="tablerow col-xs-1">{{leave.id}}</td>
+        <td class="tablerow col-xs-2">{{leave.employee.userid}}</td>
+        <td class="tablerow col-xs-2">{{leave.subject}}</td>
+        <td class="tablerow col-xs-2">{{leave.fromDate}}</td>
+        <td class="tablerow col-xs-2">{{leave.toDate}}</td>
+       
+        <td class="tablerow col-xs-3">
           <span class="action-link" role="button" tabindex="0" (click)="loadLeaveToEdit(leave.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
           <span class="action-link" role="button" tabindex="0" (click)="deleteLeave(leave.id)">{{'Delete'|translate}}</span>
         </td>
       </tr>
     </table>
+    <div style="margin-left: 60%" >
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
