--- a/src/app/components/leavetype/leavetype.component.html
+++ b/src/app/components/leavetype/leavetype.component.html
@@ -17,25 +17,28 @@
       </div>
     </div>
     <div layout="row" class="userlist ">{{'Leave Type List'|translate}}</div>
-    <table class="table table-striped table-hover settable">
+    <table class="table table-striped table-hover table-fixed settable">
       <thead>
         <tr>
-          <th>{{ 'No' | translate }}</th>
-          <th>{{ 'Name' | translate }}</th>
+          <th class="col-xs-2">{{ 'No' | translate }}</th>
+          <th class="col-xs-5">{{ 'Name' | translate }}</th>
 
-          <th style="margin-left: 60%">{{ 'Action' | translate }}</th>
+          <th class="col-xs-5">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let leavetype of allLeavetypes | filter:name">
-        <td class="tablerow">{{leavetype.id}}</td>
-        <td class="tablerow">{{leavetype.name}}</td>
-        <td class="tablerow">
+      <tr *ngFor="let leavetype of allLeavetypes | filter:name| paginate: { itemsPerPage: 8, currentPage: p}">
+        <td class="tablerow col-xs-2">{{leavetype.id}}</td>
+        <td class="tablerow col-xs-5">{{leavetype.name}}</td>
+        <td class="tablerow col-xs-5">
           <span class="action-link" role="button" tabindex="0" (click)="loadLeaveTypeToEdit(leavetype.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
           <span class="action-link" role="button" tabindex="0" (click)="deleteLeaveType(leavetype.id)">{{'Delete'|translate}}</span>
         </td>
       </tr>
     </table>
+    <div style="margin-left: 60%" >
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
