--- a/src/app/components/usertype/usertype.component.html
+++ b/src/app/components/usertype/usertype.component.html
@@ -1,6 +1,6 @@
 <app-home></app-home>
 <div class=" main-class">
-  <div class="primary-container">
+  <div class="primary-container" style="height: 100%">
     <header class="header">
       <div class="heading4">{{'User Types'|translate}}</div>
     </header>
@@ -19,27 +19,30 @@
     </div>
 
     <div layout="row" class="userlist ">{{'User Type List'|translate}}</div>
-    <table class="table table-striped table-hover settable">
+    <table class="table table-striped table-hover table-fixed settable" [mfData]="allUsertypes" #mf="mfDataTable">
       <thead>
         <tr>
-          <th>{{ 'No' | translate }}</th>
-          <th>{{ 'Name' | translate }}</th>
-          <th>{{ 'Description' | translate }}</th>
-          <th style="margin-left: 60%">{{ 'Action' | translate }}</th>
+          <th class="col-xs-2">{{ 'No' | translate }}</th>
+          <mfDefaultSorter by="usertypeName" class="col-xs-2">{{ 'Name' | translate }}</mfDefaultSorter>
+          <th class="col-xs-4">{{ 'Description' | translate }}</th>
+          <th class="col-xs-4">{{ 'Action' | translate }}</th>
         </tr>
       </thead>
-      <tr *ngFor="let usertype of allUsertypes | filter:name">
-        <td class="tablerow">{{usertype.id}}</td>
+      <tr *ngFor="let usertype of allUsertypes |orderBy:UserType| filter:name| paginate: { itemsPerPage: 8, currentPage: p}">
+        <td class="tablerow col-xs-2">{{usertype.id}}</td>
 
-        <td class="tablerow">{{usertype.usertypeName}}</td>
-        <td class="tablerow">{{usertype.description}}</td>
-        <td class="tablerow">
+        <td  class="tablerow col-xs-2">{{usertype.usertypeName}}</td>
+        <td class="tablerow col-xs-4">{{usertype.description}}</td>
+        <td class="tablerow col-xs-4">
           <span class="action-link" role="button" tabindex="0" (click)="loadUserTypeToEdit(usertype.id)" data-toggle="modal" data-target="#myModal">{{'Edit'|translate}}</span>
           <span> | </span>
           <span class="action-link" role="button" tabindex="0" (click)="deleteUserType(usertype.id)">{{'Delete'|translate}}</span>
         </td>
       </tr>
     </table>
+    <div style="margin-left: 60%" >
+      <pagination-controls (pageChange)="p = $event"></pagination-controls>
+    </div>
   </div>
 </div>
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
